# simple_nib

./: .gitignore  LICENSE  Makefile  pyproject.toml
.github/workflows/: build.yml
.repo/: rules.toml
