[tool.poetry]
name = "simplenib"
version = "0.0.1"
description = ""
authors = ["Michael Verhulst <michael@terminallabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
flask = "^3.0.0"

[tool.poetry.scripts]
simplenib = 'simplenib:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
